feat: restructure application by removing old app module and controller, adding new configuration and exception handling
- Removed old AppController, AppService, and AppModule files.
- Introduced new app configuration using ConfigModule.
- Added HttpExceptionFilter for centralized exception handling.
- Implemented TransformInterceptor for consistent response formatting.
- Updated main entry point to include global filters, interceptors, and validation pipes.
- Added new configuration files for application settings.
- Updated TypeScript configuration for stricter type checks and module paths.
- Removed outdated end-to-end tests and related configuration.

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "semi": true,
+  "printWidth": 180,
+  "tabWidth": 2,
+  "arrowParens": "avoid",
   "singleQuote": true,
   "trailingComma": "all"
 }
